// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden frames portland fixture at lg 120x40: lg 120x40 1`] = `
"┌─locations · l──────────┐Portland  45.5°, -122.7°  Wed Sep 2  synced just now                                          
│● Portland ☀️ 58°       │                                                                                              
│── now · m ──────────── │┌─main───────────────────────────────────────────────────────────────────────────────────────┐
│Dry                     ││ ╭━━━╮ ╭━━━╮°                   humidity 82%                     dew pt   53°               │
│                        ││ ┃╭━━╯ ┃╭━╮┃                    pressure 29.78 inHg              gusts    6 mph             │
│                        ││ ┃╰━━╮ ┃╰━╯┃                    uv       --                      vis      --                │
│                        ││ ╰━━╮┃ ┃╭━╮┃                    sunrise  6:33 AM                 sunset   7:46 PM           │
│                        ││ ╭━━╯┃ ┃╰━╯┃                                                                                │
│                        ││ ╰━━━╯ ╰━━━╯                                                                                │
│                        ││ ☀️ Clear sky · feels like 57°                                                              │
│                        ││                                                                                            │
│                        ││ ↑ 6:33 AM ○──────────────────────────────────────────────────────────────────── ↓ 7:46 PM  │
│                        ││                                                                                            │
│                        ││ go out    5–9 PM · dry · 58° · light wind · uv 0                                           │
│                        ││                                                                                            │
│                        ││ heads up  9 AM–5 PM · heavy rain · 0.36 in/h · gusts 37 mph                                │
│                        ││                                                                                            │
│                        ││ ── next 48h · ☂ 92% 12p ────────────────────────────────────────────────────────────────── │
│                        ││ temp       ▅64°    ▁▁                                         ▂▅▁                          │
│                        ││          ▃████▆▇█▇▆███▆▄▄▄▂▂▂                            ▂▄▅▅████▅▄▂                       │
│                        ││      ▇▆▅█████████████████████▇▄▃▁▃                    ▅▆▇███████████▆▅▄▂                   │
│                        ││      █████████████████████████████▆▁▂▄▅▆▄▂53°▁▂▃▂▂▄▆▅▅████████████████████▇███▇▇▆▄▄▅▆▅▅▅▄  │
│                        ││ rain         ▄▅▅▅▅▄▄▅▅▇▇▇▅       ▄▃        ▄▅▅▅ ▂▃▂ ▅▅          ▄▅▄ ▃▂      ▃▄▃            │
│                        ││      uv 4 · rh 62–91% · vis 3.3 mi                                                         │
│                        ││      6a            2p            10p           6a            2p            10p             │
│                        ││                                                                                            │
│                        ││ ── 14 day · page 1/2 ───────────────────────────────────────────────────────────────────── │
│                        ││                                                                                            │
│                        ││ Wed ☔️ 53° ██████████████········································ 64° ☂ 92% · 0.66 in      │
│                        ││ Thu 🌧️ 53° ████████████·········································· 62° ☂ 70% · 0.29 in      │
│                        ││ Fri 🌦️ 55° ··██████████████████████······························ 71° ☂ 25% · 0.00 in      │
│                        ││ Sat ☁️ 53° ██████████████████████████████████···················· 78°                      │
│                        ││ Sun ☁️ 58° ·······████████████████████████████··················· 79° ☂ 26%                │
│                        ││ Mon ⛅️ 58° ·······████████████████████████████████··············· 82° ☂ 22%                │
│                        ││ Tue ☁️ 57° ·····████████████████████████························· 75°                      │
│                        ││                                                                                            │
│── today ────────────── ││                                                                                            │
│53° ████··········· 64° │└────────────────────────────────────────────────────────────────────────────────────────────┘
│☂ 92% · 0.66 in         │                                                                                              
└────────────────────────┘←→ day · v view · / search · r refresh · u units · [ ]/l locations · ↑↓ scroll · ? help · …   
"
`;

exports[`golden frames portland fixture at narrow-lg 100x40: narrow-lg 100x40 1`] = `
"┌─locations · l──────────┐Portland  45.5°, -122.7°  Wed Sep 2  synced just now                      
│● Portland ☀️ 58°       │                                                                          
│                        │┌─main───────────────────────────────────────────────────────────────────┐
│                        ││ ╭━━━╮ ╭━━━╮°                   humidity 82%           dew pt   53°     │
│                        ││ ┃╭━━╯ ┃╭━╮┃                    pressure 29.78 inHg    gusts    6 mph   │
│                        ││ ┃╰━━╮ ┃╰━╯┃                    uv       --            vis      --      │
│                        ││ ╰━━╮┃ ┃╭━╮┃                    sunrise  6:33 AM       sunset   7:46 PM │
│                        ││ ╭━━╯┃ ┃╰━╯┃                                                            │
│                        ││ ╰━━━╯ ╰━━━╯                                                            │
│                        ││ ☀️ Clear sky · feels like 57°                                          │
│                        ││                                                                        │
│                        ││ ↑ 6:33 AM ○──────────────────────────────────────────────── ↓ 7:46 PM  │
│                        ││                                                                        │
│                        ││ go out    5–9 PM · dry · 58° · light wind · uv 0                       │
│                        ││                                                                        │
│                        ││ heads up  9 AM–5 PM · heavy rain · 0.36 in/h · gusts 37 mph            │
│                        ││                                                                        │
│                        ││ ── next 48h · ☂ 92% 12p ────────────────────────────────────────────── │
│                        ││ temp     ▆63°▂ ▁▃▂                              ▂▆▂                    │
│                        ││        ▁▄█████████▇▅▅▃▃                      ▅▆████▅▄                  │
│                        ││      █▇█████████████████▄▂▃               ▁▇█████████▇▆▃▁              │
│                        ││      ██████████████████████▆▁▄▅▅▄53°▂▃▂▄▆▅███████████████████▇▆▅▅▆▆▅▅  │
│                        ││ rain       ▄▅▅▅▄▄▅▇▇▅     ▃▃      ▄▅▅ ▂▂ ▅▅       ▄▄ ▃▂    ▃▄          │
│                        ││      uv 4 · rh 62–91% · vis 3.3 mi                                     │
│                        ││      6a        1p        9p        4a        12p       7p        3a    │
│                        ││                                                                        │
│                        ││ ── 14 day · page 1/2 ───────────────────────────────────────────────── │
│                        ││                                                                        │
│                        ││ Wed ☔️ 53° █████████························· 64° ☂ 92% · 0.66 in      │
│                        ││ Thu 🌧️ 53° ████████·························· 62° ☂ 70% · 0.29 in      │
│                        ││ Fri 🌦️ 55° ·██████████████··················· 71° ☂ 25% · 0.00 in      │
│                        ││ Sat ☁️ 53° █████████████████████············· 78°                      │
│                        ││ Sun ☁️ 58° ·····█████████████████············ 79° ☂ 26%                │
│                        ││ Mon ⛅️ 58° ·····████████████████████········· 82° ☂ 22%                │
│                        ││ Tue ☁️ 57° ···███████████████················ 75°                      │
│                        ││                                                                        │
│                        ││                                                                        │
│                        │└────────────────────────────────────────────────────────────────────────┘
│                        │                                                                          
└────────────────────────┘←→ day · v view · / search · r refresh · u units · [ ]/l locations · ↑…   
"
`;

exports[`golden frames portland fixture at md 80x24: md 80x24 1`] = `
"Portland  45.5°, -122.7°  Wed Sep 2  synced just now                            
                                                                                
┌─main─────────────────────────────────────────────────────────────────────────┐
│ ╭━━━╮ ╭━━━╮°                   humidity 82%              dew pt   53°        │
│ ┃╭━━╯ ┃╭━╮┃                    pressure 29.78 inHg       gusts    6 mph      │
│ ┃╰━━╮ ┃╰━╯┃                    uv       --               vis      --         │
│ ╰━━╮┃ ┃╭━╮┃                    sunrise  6:33 AM          sunset   7:46 PM    │
│ ╭━━╯┃ ┃╰━╯┃                                                                  │
│ ╰━━━╯ ╰━━━╯                                                                  │
│ ☀️ Clear sky · feels like 57°                                                │
│                                                                              │
│ ↑ 6:33 AM ○────────────────────────────────────────────────────── ↓ 7:46 PM  │
│                                                                              │
│ go out    5–9 PM · dry · 58° · light wind · uv 0                             │
│                                                                              │
│ heads up  9 AM–5 PM · heavy rain · 0.36 in/h · gusts 37 mph                  │
│                                                                              │
│ ── next 48h · ☂ 92% 12p ──────────────────────────────────────────────────── │
│ temp      ▇64°   ▁▁                                  ▂▁                      │
│         ▃████▇█▇███▆▄▄▃▂▂                       ▂▄▅▇███▅▄                    │
│                                                                       ↓ more │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
←→ day · v view · r refresh · l locations · ↑↓ scroll · ? help                  
"
`;

exports[`golden frames portland fixture at sm 60x20: sm 60x20 1`] = `
"Portland · Wed 2 · 5:45 AM                                  
                                                            
┌─main─────────────────────────────────────────────────────┐
│ 58° Clear sky · feels like 57°                           │
│ 4 mph S · humidity 82%                                   │
│                                                          │
│ ↑ 6:33 AM ○────────────────────────────────── ↓ 7:46 PM  │
│                                                          │
│ ── next 12h · ☂ 92% 12p ──────────────────────────────── │
│ temp       ▂▂64°                                         │
│            ████  ▃▃  ▅▅▃▃                                │
│          ▃▃████████▇▇████▃▃▃▃                            │
│      ▄▄57°███████████████████                            │
│ rain           ▅▅▅▅▄▄▄▄▅▅▇▇▅▅                            │
│      6a  8a  10a 12p 2p  4p                              │
│                                                          │
│                                                   ↓ more │
└──────────────────────────────────────────────────────────┘
                                                            
v day · r refresh · ↑↓ scroll · ? · q quit                  
"
`;

exports[`golden frames portland fixture at xs 40x12: xs 40x12 1`] = `
"Portland · 5:45 AM                      
                                        
┌─main─────────────────────────────────┐
│ 58° Clear sky · fl 57°               │
│                                      │
│ ▂▁▄▇█▅▆▅▆▆▄▄                         │
│                                      │
│ Wed☔️64° Thu🌧️62° Fri🌦️71° Sat☁️78…  │
│                                      │
└──────────────────────────────────────┘
                                        
v r u ? q                               
"
`;

exports[`golden frames portland fixture at md 80x24 with 24h clock and mixed units: md 80x24 mixed 24h 1`] = `
"Portland  45.5°, -122.7°  Wed Sep 2  synced just now                            
                                                                                
┌─main─────────────────────────────────────────────────────────────────────────┐
│ ╱╭╮╱ ╭╮╱╭╮°                    humidity 82%              dew pt   11°        │
│ ╭╯┃╱ ┃┃╱┃┃                     pressure 29.78 inHg       gusts    6 mph      │
│ ╰╮┃╱ ┃╰━╯┃                     uv       --               vis      --         │
│ ╱┃┃╱ ╰━━╮┃                     sunrise  06:33            sunset   19:46      │
│ ╭╯╰╮ ╱╱╱┃┃                                                                   │
│ ╰━━╯ ╱╱╱╰╯                                                                   │
│ ☀️ Clear sky · feels like 14°                                                │
│                                                                              │
│ ↑ 06:33 ○────────────────────────────────────────────────────────── ↓ 19:46  │
│                                                                              │
│ go out    17–21 · dry · 14° · light wind · uv 0                              │
│                                                                              │
│ heads up  09–17 · heavy rain · 0.36 in/h · gusts 37 mph                      │
│                                                                              │
│ ── next 48h · ☂ 92% 12 ───────────────────────────────────────────────────── │
│ temp      ▇18°   ▁▁                                  ▂▁                      │
│         ▃████▇█▇███▆▄▄▃▂▂                       ▂▄▅▇███▅▄                    │
│                                                                       ↓ more │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
←→ day · v view · r refresh · l locations · ↑↓ scroll · ? help                  
"
`;

exports[`golden frames portland fixture at sm 60x20 with 24h header clock and mixed units: sm 60x20 mixed 24h 1`] = `
"Portland · Wed 2 · 05:45                                    
                                                            
┌─main─────────────────────────────────────────────────────┐
│ 14° Clear sky · feels like 14°                           │
│ 4 mph S · humidity 82%                                   │
│                                                          │
│ ↑ 06:33 ○────────────────────────────────────── ↓ 19:46  │
│                                                          │
│ ── next 12h · ☂ 92% 12 ───────────────────────────────── │
│ temp       ▂▂18°                                         │
│            ████  ▃▃  ▅▅▃▃                                │
│          ▃▃████████▇▇████▃▃▃▃                            │
│      ▄▄14°███████████████████                            │
│ rain           ▅▅▅▅▄▄▄▄▅▅▇▇▅▅                            │
│      06  08  10  12  14  16                              │
│                                                          │
│                                                   ↓ more │
└──────────────────────────────────────────────────────────┘
                                                            
v day · r refresh · ↑↓ scroll · ? · q quit                  
"
`;
